<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="new_contact">New Contact</string>
    <string name="change_to_purple">Purple</string>
    <string name="change_to_blue">Blue</string>
    <string name="change_to_red">Red</string>
    <string name="change_to_green">Green</string>
    <string name="contacts_book">Contacts book</string>
    <string name="created_name_hint">Name</string>
    <string name="created_number_hint">Number</string>
    <string name="save">Save</string>
    <string name="empty_name_error_message">The name field must not be empty</string>
    <string name="invalid_number_error_message">Such number already exists</string>
    <string name="incorrect_number_error_message">Number not correct</string>
    <string name="empty_string" translatable="false" />
    <string name="created_last_name_hint">Last name</string>
    <string name="created_email_hint">Email</string>
    <string name="empty_number_error_message">The number field must not be empty</string>
    <string name="name">Name: </string>
    <string name="number">Number: </string>
    <string name="email">Email: </string>
    <string name="delete_contact">Delete contact</string>
    <string name="should_delete_the_contact">Are you sure you want to delete a contact? It will no longer be possible to cancel this action</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="chat_input">Enter text</string>
    <string name="error_send_message">You can\'t send messages</string>
    <string name="details">Details</string>

    <plurals name="message_background_time">
        <item quantity="one">You were away for %1$d second</item>
        <item quantity="other">You were away for %1$d seconds</item>
    </plurals>
</resources>